# client/docs/swagger-ui/swagger.yaml
@@ -201,6 +201,21 @@ paths:
                       example: >-
                         poolD35A0CC16EE598F90B044CE296A405BA9C381E38837599D96F2F70C2F02A23A4
                       title: denom of pool coin of the pool
+                    swap_fee_rate:
+                      type: string
+                      format: sdk.Dec
+                      example: '0.003'
+                      title: Swap fee rate for every executed swap
+                    pool_governor_address:
+                      type: string
+                      format: sdk.AccAddress
+                      example: cosmos1e35y69rhrt7y4yce5l5u73sjnxu0l33wvznyun
+                      description: >-
+                        account address of pool governor - governor can adjust
+                        swap fee rate
+                      title: >-
+                        Pool governor address - initially set to pool creator
+                        address - updated when someone deposit more funds
                   title: The liquidity pool information
               pagination:
                 description: >-
@@ -352,6 +367,21 @@ paths:
                     example: >-
                       poolD35A0CC16EE598F90B044CE296A405BA9C381E38837599D96F2F70C2F02A23A4
                     title: denom of pool coin of the pool
+                  swap_fee_rate:
+                    type: string
+                    format: sdk.Dec
+                    example: '0.003'
+                    title: Swap fee rate for every executed swap
+                  pool_governor_address:
+                    type: string
+                    format: sdk.AccAddress
+                    example: cosmos1e35y69rhrt7y4yce5l5u73sjnxu0l33wvznyun
+                    description: >-
+                      account address of pool governor - governor can adjust
+                      swap fee rate
+                    title: >-
+                      Pool governor address - initially set to pool creator
+                      address - updated when someone deposit more funds
                 title: The liquidity pool information
             description: >-
               the response type for the QueryLiquidityPoolResponse RPC method.
@@ -2451,6 +2481,19 @@ definitions:
         type: string
         example: poolD35A0CC16EE598F90B044CE296A405BA9C381E38837599D96F2F70C2F02A23A4
         title: denom of pool coin of the pool
+      swap_fee_rate:
+        type: string
+        format: sdk.Dec
+        example: '0.003'
+        title: Swap fee rate for every executed swap
+      pool_governor_address:
+        type: string
+        format: sdk.AccAddress
+        example: cosmos1e35y69rhrt7y4yce5l5u73sjnxu0l33wvznyun
+        description: account address of pool governor - governor can adjust swap fee rate
+        title: >-
+          Pool governor address - initially set to pool creator address -
+          updated when someone deposit more funds
     title: The liquidity pool information
   tendermint.liquidity.v1beta1.PoolBatch:
     type: object
@@ -2611,6 +2654,21 @@ definitions:
             example: >-
               poolD35A0CC16EE598F90B044CE296A405BA9C381E38837599D96F2F70C2F02A23A4
             title: denom of pool coin of the pool
+          swap_fee_rate:
+            type: string
+            format: sdk.Dec
+            example: '0.003'
+            title: Swap fee rate for every executed swap
+          pool_governor_address:
+            type: string
+            format: sdk.AccAddress
+            example: cosmos1e35y69rhrt7y4yce5l5u73sjnxu0l33wvznyun
+            description: >-
+              account address of pool governor - governor can adjust swap fee
+              rate
+            title: >-
+              Pool governor address - initially set to pool creator address -
+              updated when someone deposit more funds
         title: The liquidity pool information
     description: >-
       the response type for the QueryLiquidityPoolResponse RPC method. It
@@ -2651,6 +2709,21 @@ definitions:
               example: >-
                 poolD35A0CC16EE598F90B044CE296A405BA9C381E38837599D96F2F70C2F02A23A4
               title: denom of pool coin of the pool
+            swap_fee_rate:
+              type: string
+              format: sdk.Dec
+              example: '0.003'
+              title: Swap fee rate for every executed swap
+            pool_governor_address:
+              type: string
+              format: sdk.AccAddress
+              example: cosmos1e35y69rhrt7y4yce5l5u73sjnxu0l33wvznyun
+              description: >-
+                account address of pool governor - governor can adjust swap fee
+                rate
+              title: >-
+                Pool governor address - initially set to pool creator address -
+                updated when someone deposit more funds
           title: The liquidity pool information
       pagination:
         description: >-
